# python-qa-guru

./: .env.sample  TODO.txt  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  users.json  users_copy.json
app/: main.py
app/database/: engine.py  users.py
app/models/: User.py
app/routers/: status_router.py  user__router.py
models/: User.py
routers/: status_router.py  user__router.py
tests/: conftest.py  users_tests.py
tests/config/: config.py
tests/models/: User.py  UserCreate.py
tests/users/: users_crud_tests.py  users_pagination_tests.py  users_smoke_tests.py
tests/utils/: data_generator.py
